--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,25 @@
-<h1>The cocktails in daa placeee pow pow pow</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://static.essential-adventure.co.uk/production/2be68c3237d960de19c22066f52e85d7/cocktail-making-masterclass_medium-header-cropped.jpg);">
+  <div class="container">
+    <h1>The cocktail club</h1>
+  </div>
+</div>
+<div class="row">
+  <% @cocktails.each do|cocktail| %>
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <div class="card-img-top" <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>></div>
+          <div class="card-body">
+            <h5 class="card-title"><%= cocktail.name %></h5>
+            <div class="btn btn-primary"><%= link_to 'View Cocktail', "/cocktails/#{cocktail.id}" %></div>
+          </div>
+        </div>
+      </div>
+  <% end %>
+</div>
 
-<% @cocktails.each do |cocktail| %>
-    <%= cocktail.name %>
 
-    <!-- later we want to display the doses that belong to a cocktail with the ingredient name -->
-<% end %>
+<div class="btn btn-primary"><%= link_to "Create a new cocktail", '/cocktails/new' %>
+</div>
+
+
+
