--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,12 @@
-<!-- in any helper method from rails you can pass some html attributes -->
-<%= simple_form_for(@cocktail) do |f|%>
- <%= f.input :name %>
- <%= f.submit class: 'btn btn-primary' %>
-<% end %>
+<h1>Create a new cocktail</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <%= simple_form_for @cocktail do |f| %>
+        <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
