--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,9 +1,13 @@
-<h1>Form to create a dose</h1>
+<h1>Add a new dose to your <%= @cocktail.name %>!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+        <%= f.association :ingredient%>
+        <%= f.input :description %>
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<%= simple_form_for([@cocktail, @dose]) do |f|%>
-  <%= f.association  :ingredient %>
-  <!-- passing actually the id of the ingredient -->
-  <%#= f.input  :ingredient_id %>
-  <%= f.input :description %>
-  <%= f.submit %>
-<% end %>
